--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,12 +23,8 @@ jobs:
     runs-on: ${{ matrix.platform }}
 
     steps:
-      - name: Checkout from private repo
+      - name: Checkout
         uses: actions/checkout@v4
-        with:
-          repository: hj01857655/kiro-account-manager_dev
-          ref: dev
-          token: ${{ secrets.PRIVATE_REPO_TOKEN }}
 
       - name: Setup Node
         uses: actions/setup-node@v4
@@ -55,7 +51,7 @@ jobs:
         with:
           tagName: v__VERSION__
           releaseName: 'Kiro Account Manager v__VERSION__'
-          releaseBody: '请查看 CHANGELOG 了解更新内容。'
+          releaseBody: '请查看更新内容。'
           releaseDraft: false
           prerelease: false
           args: ${{ matrix.target && format('--target {0}', matrix.target) || '' }}
