--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -2,7 +2,7 @@
 name = "kiro-account-manager"
 version = "1.5.1"
 description = "Kiro Account Manager"
-authors = ["you"]
+authors = ["ipiggy"]
 license = ""
 repository = ""
 edition = "2021"
