fix: update workflow for Windows build

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,11 +14,11 @@ jobs:
       matrix:
         include:
           - platform: windows-latest
-            target: ''
+            args: ''
           - platform: macos-latest
-            target: 'x86_64-apple-darwin'
+            args: '--target x86_64-apple-darwin'
           - platform: macos-latest
-            target: 'aarch64-apple-darwin'
+            args: '--target aarch64-apple-darwin'
 
     runs-on: ${{ matrix.platform }}
 
@@ -34,7 +34,7 @@ jobs:
       - name: Install Rust stable
         uses: dtolnay/rust-toolchain@stable
         with:
-          targets: ${{ matrix.target }}
+          targets: ${{ matrix.platform == 'macos-latest' && (contains(matrix.args, 'x86_64') && 'x86_64-apple-darwin' || 'aarch64-apple-darwin') || '' }}
 
       - name: Clean and install dependencies
         shell: bash
@@ -54,4 +54,4 @@ jobs:
           releaseBody: '请查看更新内容。'
           releaseDraft: false
           prerelease: false
-          args: ${{ matrix.target && format('--target {0}', matrix.target) || '' }}
+          args: ${{ matrix.args }}
