--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -35,7 +35,8 @@ jobs:
       - name: Build Windows
         shell: bash
         run: |
-          npm run tauri build
+          npm run build
+          cargo tauri build
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
