Disable signing for Windows build

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -42,6 +42,9 @@ jobs:
 
       - name: Build Windows
         shell: bash
+        env:
+          TAURI_PRIVATE_KEY: ""
+          TAURI_KEY_PASSWORD: ""
         run: |
           npm run build
           cargo tauri build
